# workflowy-py

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/workflowy_py/: __init__.py  client.py  config.py  errors.py  models.py
tests/: test_client.py  test_config.py  test_integration.py
