[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workflowy-py"
version = "0.0.1"
description = "A clean, typed, sync Python client for the WorkFlowy API."
readme = "README.md"
authors = [
  { name="Rodolfo Terriquez", email="rodolfo.terriquez@gmail.com" },
]
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx >= 0.25.0",
    "pydantic >= 2.4.0",
]

[project.urls]
Homepage = "https://github.com/rodolfo-terriquez/workflowy-py"
"Bug Tracker" = "https://github.com/rodolfo-terriquez/workflowy-py/issues"

[project.optional-dependencies]
dev = []

[tool.hatch.version]
path = "src/workflowy_py/__init__.py"
